syntax = "proto3";

package example.demo2;
option java_multiple_files = true;
option java_package = "com.example.demo2";

import "google/api/annotations.proto";

message Foo {
    int64 id = 1;
    string content = 2;
}

message Bar {
    int64 id = 1;
    string content = 2;
}

message GetFooRequest {
    int64 id = 1;
}

message GetBarRequest {
    int64 id = 1;
}

service FooService {
    rpc GetFoo(GetFooRequest) returns (Foo) {}
}

service BarService {
    rpc GetBar(GetBarRequest) returns (Bar) {}
}
